# node-editor

./: .gitignore  CMakeLists.txt  TODO.md  build_docs.bat  dependencies.cmake  doxygen_config.txt  generate.bat  generate_release.bat  imgui.ini  readme.md  save_ini_file.ps1
example/: Application.cpp  Application.h  CMakeLists.txt  Deserialize.cpp  Deserialize.h  MeshGenerator.cpp  MeshGenerator.h  Serialize.cpp  Serialize.h  StringGenerator.cpp  StringGenerator.h  example.cpp  params.h  utils.h
example/src/: Application.cpp  Application.h  Deserialize.h  NumberOperator.cpp  NumberOperator.h  Serialize.cpp  Serialize.h  StringGenerator.cpp  StringGenerator.h  example.cpp  params.h  utils.cpp  utils.h
python/: copy_ini_file_if_needed.py  main.py  requirements.txt
src/: Action.cpp  Action.h  ActionManager.h  Application.cpp  Application.h  BaseApplication.cpp  BaseApplication.h  Event.h  EventDispatcher.h  EventManager.h  ImGuiNode.cpp  ImGuiNode.h  NetworkView.cpp  NetworkView.h  Node.h  NodeFactory.cpp  NodeFactory.h  NodeManager.cpp  NodeManager.h  NodeParam.cpp  NodeParam.h  ParamFactory.cpp  ParamFactory.h  constants.h  example.cpp  main.cpp  node_editor.h  pch.h  ui_utils.cpp  ui_utils.h  utils.cpp  utils.h  yaml_convert.h  yaml_serialize.cpp  yaml_serialize.h
src/utils/: node_manager_utils.cpp  node_manager_utils.h
